// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSelectors Should create selectors 1`] = `
Object {
  "after button": Object {
    "hover": Object {
      "label": "button ::after on hover",
      "target": "buttonClassName:hover::after",
    },
    "normal": Object {
      "label": "button ::after",
      "target": "buttonClassName::after",
    },
  },
  "after canvas": Object {
    "hover": Object {
      "label": "canvas ::after on hover",
      "target": ":hover::after",
    },
    "normal": Object {
      "label": "canvas ::after",
      "target": "::after",
    },
  },
  "before button": Object {
    "hover": Object {
      "label": "button ::before on hover",
      "target": "buttonClassName:hover::before",
    },
    "normal": Object {
      "label": "button ::before",
      "target": "buttonClassName::before",
    },
  },
  "before canvas": Object {
    "hover": Object {
      "label": "canvas ::before on hover",
      "target": ":hover::before",
    },
    "normal": Object {
      "label": "canvas ::before",
      "target": "::before",
    },
  },
  "button": Object {
    "hover": Object {
      "label": "button on hover",
      "target": "buttonClassName:hover",
    },
    "normal": Object {
      "label": "button",
      "target": "buttonClassName",
    },
  },
  "canvas": Object {
    "hover": Object {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "normal": Object {
      "label": "canvas",
      "target": "",
    },
  },
}
`;

exports[`createSelectors Should create selectors without pseudo elements 1`] = `
Object {
  "button": Object {
    "hover": Object {
      "label": "button on hover",
      "target": "buttonClassName:hover",
    },
    "normal": Object {
      "label": "button",
      "target": "buttonClassName",
    },
  },
  "canvas": Object {
    "hover": Object {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "normal": Object {
      "label": "canvas",
      "target": "",
    },
  },
}
`;
